<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_post"
            android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/menu_post" />
        <item
            android:id="@+id/nav_my_post"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/menu_my_post" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/presence_offline"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_register" />
    </group>
</menu>