<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="tech.siham.papp.ui.auth.LoginRegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title" />


        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name">


            <TextView
                android:id="@+id/text_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintTextColor="@color/orange_button"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/edit_text_email"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="16dp">-->

<!--                <EditText-->
<!--                    android:id="@+id/email"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:autofillHints=""-->
<!--                    android:ems="10"-->
<!--                    android:hint="@string/email"-->
<!--                    android:inputType="textEmailAddress" />-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/orange_button"
                app:passwordToggleTint="@color/orange_button">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:text="@string/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_red"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp" />


            <LinearLayout
                android:id="@+id/go_register_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/menu_register"
                    android:textColor="@color/orange_button"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/lovely_cat" />
        </LinearLayout>

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--            app:LoginStatus="@{data.loginStatus}"-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>