<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="tech.siham.papp.ui.mypost.MyPostViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:refreshing="@{data.isLoading}"
        app:onRefreshListener="@{() -> data.onRefresh()}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:myPosts="@{data.post}"
                android:id="@+id/post"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="20"
                tools:listitem="@layout/post_items" />

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:LoadingMyPostStatus="@{data.status}"
                android:contentDescription="@string/app_name" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="54dp"
                app:fabSize="mini"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_24"
                android:contentDescription="@string/add_post" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete_all_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#EF5050"
                app:fabSize="mini"
                android:contentDescription="@string/delete_all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_delete" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>
