<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="myPost"
            type="tech.siham.papp.models.MyPost" />
    </data>

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="5dp"
            android:layout_margin="5dp"
            app:cardMaxElevation="5dp"
            android:shadowColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_margin="2dp"
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{myPost.imageUrl}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/control_buttons"
                    android:layout_toEndOf="@+id/image"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@{myPost.description}"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:padding="5dp"-->
<!--                        android:text="@{myPost.description}"-->
<!--                        android:textColor="@color/gray"-->
<!--                        android:textSize="12sp" />-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@{`Content`+ myPost.content}"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/control_buttons"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_edit"
                        android:id="@+id/button_edit"
                        android:contentDescription="@string/edit" />

                    <ImageView
                        android:contentDescription="@string/delete"
                        android:layout_margin="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_delete"
                        android:id="@+id/button_delete" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
